<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/search"/>
    <item
        android:id="@+id/add_note"
        android:orderInCategory="1"
        android:title="@string/addnote" />
    <item
        android:id="@+id/sort_title"
        android:orderInCategory="2"
        android:title="@string/sortbytitle" />
    <item
        android:id="@+id/sort_import"
        android:orderInCategory="3"
        android:title="@string/sortbyimportance" />
</menu>
